stage0/tests/compile_fail/types/unknown_type.dg
func f(x: Widget) -> i32 {
    0
}
